Change directories to every html files
/ to /anifan-test

--- a/movies/wall_e.html
+++ b/movies/wall_e.html
@@ -36,36 +36,36 @@
 <body>
     <div class="mask" id="mask" onclick="dropHamburger()">
         <div class="hamburger" id="hamburger">
-            <a href="/">HOME</a>
-            <a href="/movies/movies.html" id="current_page">MOVIES</a>
-            <a href="/tv_series/tv_series.html">TV SERIES</a>
-            <a href="/studios/studios.html">STUDIOS</a>
-            <a href="/about/about.html">ABOUT</a>
+            <a href="/anifan-test/">HOME</a>
+            <a href="/anifan-test/movies/movies.html" id="current_page">MOVIES</a>
+            <a href="/anifan-test/tv_series/tv_series.html">TV SERIES</a>
+            <a href="/anifan-test/studios/studios.html">STUDIOS</a>
+            <a href="/anifan-test/about/about.html">ABOUT</a>
         </div>
     </div>
     <header>
-        <a href="/"><img src="https://neukevin.neocities.org/final_project_img/anifan_logo.png" alt="AniFan Logo"
+        <a href="/anifan-test/"><img src="https://neukevin.neocities.org/final_project_img/anifan_logo.png" alt="AniFan Logo"
                 title="Home" class="logo"></a>
         <nav>
-            <a href="/">HOME</a>
+            <a href="/anifan-test/">HOME</a>
             <div class="drop_down">
-                <a href="/movies/movies.html" id="current_page">MOVIES</a>
+                <a href="/anifan-test/movies/movies.html" id="current_page">MOVIES</a>
                 <div>
-                    <a href="/movies/wall_e.html">WALL·E</a>
-                    <a href="/movies/wreck_it_ralph.html">Wreck-It Ralph</a>
-                    <a href="/movies/princess_mononoke.html">Princess Mononoke</a>
+                    <a href="/anifan-test/movies/wall_e.html">WALL·E</a>
+                    <a href="/anifan-test/movies/wreck_it_ralph.html">Wreck-It Ralph</a>
+                    <a href="/anifan-test/movies/princess_mononoke.html">Princess Mononoke</a>
                 </div>
             </div>
             <div class="drop_down">
-                <a href="/tv_series/tv_series.html">TV SERIES</a>
+                <a href="/anifan-test/tv_series/tv_series.html">TV SERIES</a>
                 <div>
-                    <a href="/tv_series/adventure_time.html">Adventure Time</a>
-                    <a href="/tv_series/violet_evergarden.html">Violet Evergarden</a>
-                    <a href="/tv_series/fullmetal_alchemist_brotherhood.html">Fullmetal Alchemist: Brotherhood</a>
+                    <a href="/anifan-test/tv_series/adventure_time.html">Adventure Time</a>
+                    <a href="/anifan-test/tv_series/violet_evergarden.html">Violet Evergarden</a>
+                    <a href="/anifan-test/tv_series/fullmetal_alchemist_brotherhood.html">Fullmetal Alchemist: Brotherhood</a>
                 </div>
             </div>
-            <a href="/studios/studios.html">STUDIOS</a>
-            <a href="/about/about.html">ABOUT</a>
+            <a href="/anifan-test/studios/studios.html">STUDIOS</a>
+            <a href="/anifan-test/about/about.html">ABOUT</a>
         </nav>
         <div class="hamburger_icon" id="hamburger_icon" onclick="dropHamburger()">
             <div class="rect1"></div>
@@ -148,13 +148,13 @@
     <footer>
         <div>
             <div class="sitemap">
-                <a href="/"><span>HOME</span></a>
-                <a href="/movies/movies.html"><span>MOVIES</span></a>
-                <a href="/tv_series/tv_series.html"><span>TV SERIES</span></a>
-                <a href="/studios/studios.html"><span>STUDIOS</span></a>
-                <a href="/about/about.html"><span>ABOUT</span></a>
+                <a href="/anifan-test/"><span>HOME</span></a>
+                <a href="/anifan-test/movies/movies.html"><span>MOVIES</span></a>
+                <a href="/anifan-test/tv_series/tv_series.html"><span>TV SERIES</span></a>
+                <a href="/anifan-test/studios/studios.html"><span>STUDIOS</span></a>
+                <a href="/anifan-test/about/about.html"><span>ABOUT</span></a>
             </div>
-            <a href="/"><img src="https://neukevin.neocities.org/final_project_img/anifan_logo.png" alt="AniFan Logo"
+            <a href="/anifan-test/"><img src="https://neukevin.neocities.org/final_project_img/anifan_logo.png" alt="AniFan Logo"
                     title="Home"></a>
         </div>
         <p>Created By AniFan 2021.</p>
