--- a/home/index.html
+++ b/home/index.html
@@ -37,39 +37,39 @@
     <!-- create a mask to cover the whole page when dropping down with the hamburger menu, add onclick event to show the mask and menu -->
     <div class="mask" id="mask" onclick="dropHamburger()">
         <div class="hamburger" id="hamburger">
-            <a href="/anifan-test/" id="current_page">HOME</a>
-            <a href="/anifan-test/movies/movies.html">MOVIES</a>
-            <a href="/anifan-test/tv_series/tv_series.html">TV SERIES</a>
-            <a href="/anifan-test/studios/studios.html">STUDIOS</a>
-            <a href="/anifan-test/about/about.html">ABOUT</a>
+            <a href="/anifan-test/home/" id="current_page">HOME</a>
+            <a href="/anifan-test/home/movies/movies.html">MOVIES</a>
+            <a href="/anifan-test/home/tv_series/tv_series.html">TV SERIES</a>
+            <a href="/anifan-test/home/studios/studios.html">STUDIOS</a>
+            <a href="/anifan-test/home/about/about.html">ABOUT</a>
         </div>
     </div>
     <header>
-        <a href="/anifan-test/">
+        <a href="/anifan-test/home/">
             <img src="https://neukevin.neocities.org/final_project_img/anifan_logo.png" alt="AniFan Logo" title="Home"
                 class="logo">
         </a>
 
         <nav>
-            <a href="/anifan-test/" id="current_page">HOME</a>
+            <a href="/anifan-test/home/" id="current_page">HOME</a>
             <div class="drop_down">
-                <a href="/anifan-test/movies/movies.html">MOVIES</a>
+                <a href="/anifan-test/home/movies/movies.html">MOVIES</a>
                 <div>
-                    <a href="/anifan-test/movies/wall_e.html">WALL·E</a>
-                    <a href="/anifan-test/movies/wreck_it_ralph.html">Wreck-It Ralph</a>
-                    <a href="/anifan-test/movies/princess_mononoke.html">Princess Mononoke</a>
+                    <a href="/anifan-test/home/movies/wall_e.html">WALL·E</a>
+                    <a href="/anifan-test/home/movies/wreck_it_ralph.html">Wreck-It Ralph</a>
+                    <a href="/anifan-test/home/movies/princess_mononoke.html">Princess Mononoke</a>
                 </div>
             </div>
             <div class="drop_down">
-                <a href="/anifan-test/tv_series/tv_series.html">TV SERIES</a>
+                <a href="/anifan-test/home/tv_series/tv_series.html">TV SERIES</a>
                 <div>
-                    <a href="/anifan-test/tv_series/adventure_time.html">Adventure Time</a>
-                    <a href="/anifan-test/tv_series/violet_evergarden.html">Violet Evergarden</a>
-                    <a href="/anifan-test/tv_series/fullmetal_alchemist_brotherhood.html">Fullmetal Alchemist: Brotherhood</a>
+                    <a href="/anifan-test/home/tv_series/adventure_time.html">Adventure Time</a>
+                    <a href="/anifan-test/home/tv_series/violet_evergarden.html">Violet Evergarden</a>
+                    <a href="/anifan-test/home/tv_series/fullmetal_alchemist_brotherhood.html">Fullmetal Alchemist: Brotherhood</a>
                 </div>
             </div>
-            <a href="/anifan-test/studios/studios.html">STUDIOS</a>
-            <a href="/anifan-test/about/about.html">ABOUT</a>
+            <a href="/anifan-test/home/studios/studios.html">STUDIOS</a>
+            <a href="/anifan-test/home/about/about.html">ABOUT</a>
         </nav>
 
         <!-- create a button for the hamburger menu with three div and add onclick event -->
@@ -101,7 +101,7 @@
                 <div class="link_box_decoration_top"></div>
 
                 <span>Animation Movies</span>
-                <a href="/anifan-test/movies/movies.html" class="explore_button" title="View animation movies page">EXPLORE MORE</a>
+                <a href="/anifan-test/home/movies/movies.html" class="explore_button" title="View animation movies page">EXPLORE MORE</a>
                 
                 <div class="link_box_decoration_bottom"></div>
             </div>
@@ -119,7 +119,7 @@
                 <div class="link_box_decoration_top"></div>
 
                 <span>Animation TV Series</span>
-                <a href="/anifan-test/tv_series/tv_series.html" class="explore_button" title="View animation tv series page">EXPLORE
+                <a href="/anifan-test/home/tv_series/tv_series.html" class="explore_button" title="View animation tv series page">EXPLORE
                     MORE</a>
 
                 <div class="link_box_decoration_bottom"></div>
@@ -169,13 +169,13 @@
     <footer>
         <div>
             <div class="sitemap">
-                <a href="/anifan-test/"><span>HOME</span></a>
-                <a href="/anifan-test/movies/movies.html"><span>MOVIES</span></a>
-                <a href="/anifan-test/tv_series/tv_series.html"><span>TV SERIES</span></a>
-                <a href="/anifan-test/studios/studios.html"><span>STUDIOS</span></a>
-                <a href="/anifan-test/about/about.html"><span>ABOUT</span></a>
+                <a href="/anifan-test/home/"><span>HOME</span></a>
+                <a href="/anifan-test/home/movies/movies.html"><span>MOVIES</span></a>
+                <a href="/anifan-test/home/tv_series/tv_series.html"><span>TV SERIES</span></a>
+                <a href="/anifan-test/home/studios/studios.html"><span>STUDIOS</span></a>
+                <a href="/anifan-test/home/about/about.html"><span>ABOUT</span></a>
             </div>
-            <a href="/anifan-test/"><img src="https://neukevin.neocities.org/final_project_img/anifan_logo.png" alt="AniFan Logo"
+            <a href="/anifan-test/home/"><img src="https://neukevin.neocities.org/final_project_img/anifan_logo.png" alt="AniFan Logo"
                     title="Home"></a>
         </div>
         <p>Created By AniFan 2021.</p>
