--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             background: #DDD;
             padding: 15px;
             margin-right: 10px;
+            margin-bottom: 10px;
             border-left: 8px solid;
             text-decoration: none;
             border-radius: 4px;
