--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
             background: silver;
             padding: 10px;
             border-radius: 4px;
-            display: inline-block;
+            max-width: 750px;
+            margin: 0.6em auto;
+            text-align: center;
+        }
+
+        div{
+            display: flex;
+            justify-content: center;
         }
 
         a{
